--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <brnk rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <button class="button">
-        Fancy Button
-        <div class="button__horizontal"></div>
-        <div class="button__vertical"></div>
+      Fancy Button
+      <div class="button__horizontal"></div>
+      <div class="button__vertical"></div>
     </button>
-
-</body>
+    <br>
+    <br>
+    <form>
+      <br>
+        <label for="">
+          Your First Name
+          <input type="text" id="cap1" onblur="myFunc()" />
+        </label>
+      </br>
+      <br>
+        <label for="">
+          Your First Name
+          <input type="text" id="cap2" onblur="myFunc()" />
+        </label>
+      </br>
+    </form>
+    <script src="main.js"></script>
+  </body>
 </html>
