--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <brnk rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
   </head>
   <body>
-    <button class="button">
-      Fancy Button
-      <div class="button__horizontal"></div>
-      <div class="button__vertical"></div>
-    </button>
-    <br>
-    <br>
+    <h1>Automatic Uppercase</h1>
+   <br>
+   <br>
+   <br>
+   <br>
     <form>
       <br>
         <label for="">
@@ -22,9 +20,8 @@
           <input type="text" id="cap1" onblur="myFunc()" />
         </label>
       </br>
-      <br>
         <label for="">
-          Your First Name
+          Your last Name
           <input type="text" id="cap2" onblur="myFunc()" />
         </label>
       </br>
