--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
         </label>
       </br>
     </form>
+    <br>
+    <form action="">
+      Hobbies:
+      <input type="checkbox" name="" id="">Programming
+      <input type="checkbox" name="" id="">Coding
+      <input type="checkbox" name="" id="">Youtubing
+      <br>
+      Gender:
+      <input type="radio" name="" id="">male
+      <input type="radio" name="" id="">female
+
+    </form>
     <script src="main.js"></script>
   </body>
 </html>
